--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "New User Registration and Login Using JWT",
   "main": "index.js",
   "scripts": {
-    "start" : "nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rutik Khalkar",
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
+    "nodemailer": "^6.7.0",
     "nodemon": "^2.0.13"
   }
 }
